tests/NormalTests/paczka1/fuzzy1/97427283.err
Error in line 1: rFT S323 4,9
Error in line 6: A150 S41 94,6
Error in line 4: LCFoG A700 69,5
Error in line 13: A150 A700 49p6
Error in line 8: A150 A150 11,5
Error in line 26: MsyIxS S41 45,6
Error in line 25: BKk0 A700 78,7
